Introduce a JOGL Canvas