@@ -27,6 +27,9 @@ dependencies {
   implementation project(':DepanFxJava')
   implementation project(':DepanFxJavaGui')
   implementation project(':DepanFxNodeListGui')
+  implementation project(':DepanFxJogl')
+  implementation project(':DepanFxNodeListGui')
+  implementation project(':DepanFxNodeViewGui')
   implementation project(':DepanFxPersistence')
   implementation project(':DepanFxPerspective')
   implementation project(':DepanFxScene')
@@ -40,7 +43,13 @@ dependencies {
 application {
   mainClass = "com.pnambic.depanfx.DepanFxApplication"
   mainModule = "depanfx.app"
-  applicationDefaultJvmArgs = [ '-Xmx4G', '-Xss2m' ]
+  applicationDefaultJvmArgs = [
+    '-Xmx4G',
+    '--add-opens', 'javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
+    '--add-opens', 'javafx.graphics/javafx.stage=ALL-UNNAMED',
+    '--add-opens', 'javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED',
+    '--add-opens', 'javafx.graphics/com.sun.glass.ui=ALL-UNNAMED'
+  ]
 }
 
 jlink {
